# teamtalk-server

./: CMakeLists.txt  README  README.md
module/: curl.cmake  hiredis.cmake  jsoncpp.cmake  openssl.cmake  protobuf.cmake  spdlog.cmake  yaml-cpp.cmake
pub/include/base/: BaseSocket.h
pub/pb/: IM.Group.proto  IM.Message.proto  IM.SwitchService.proto  create.sh  sync.sh  sync_project.sh
pub/script/: restart.sh  stop.sh
public/include/base/: ConfigFileReader.h  im_conn_util.h  slog.h
public/pb/: IM.BaseDefine.proto  IM.Buddy.proto  IM.File.proto  IM.Login.proto  IM.Other.proto  IM.Server.proto  create.sh
src/: CMakeLists.txt  README.md
src/base/: BaseSocket.cpp  CMakeLists.txt  CMakeSettings.json  EventDispatch.cpp  HttpClient.cpp  ImPduBase.cpp  SSLSocket.cpp  imconn.cpp  netlib.cpp
src/db_proxy_server/: .gitignore  AutoPool.cpp  CMakeLists.txt  CachePool.cpp  CachePool.h  DBPool.cpp  DBPool.h  ProxyConn.cpp  ProxyTask.cpp  ProxyTask.h  README.md  db_proxy_server.cpp
src/db_proxy_server/business/: AudioModel.cpp  AudioModel.h  DepartAction.cpp  DepartAction.h  ExterLogin.cpp  ExterLogin.h  FileAction.cpp  FileAction.h  FileModel.cpp  FileModel.h  GroupAction.cpp  GroupAction.h  GroupMessageModel.cpp  GroupMessageModel.h  GroupModel.cpp  Login.h  MessageContent.cpp  MessageContent.h  MessageModel.cpp  MessageModel.h  RelationModel.cpp  RelationModel.h  SessionModel.cpp  SessionModel.h  UserAction.h  UserModel.cpp  UserModel.h
src/file_server/: CMakeLists.txt  config_util.cpp  file_client_conn.cpp  file_msg_server_conn.cpp  file_msg_server_conn.h  file_server.cpp  file_server_util.h  transfer_task.cpp  transfer_task.h  transfer_task_manager.cpp  transfer_task_manager.h
src/http_msg_server/: CMakeLists.txt  DBServConn.cpp  DBServConn.h  HttpPdu.h  RouteServConn.cpp  RouteServConn.h  http_msg_server.cpp
src/login_server/: CMakeLists.txt  HttpConn.cpp  LoginConn.cpp  ipparser.h  log4cxx.properties  login_server.cpp
src/msfs/: CMakeLists.txt  FileManager.cpp  FileManager.h  main.cpp  msfs.conf
src/msg_server/: AttachData.h  CMakeLists.txt  FileHandler.cpp  FileServConn.h  ImUser.h  LoginServConn.cpp  LoginServConn.h  MsgConn.cpp  MsgConn.h  RouteServConn.h
src/pb/protocol/: IM.BaseDefine.pb.cc  IM.Buddy.proto  IM.File.pb.cc  IM.File.proto  IM.Group.pb.h  IM.Other.pb.cc  IM.Other.pb.h  IM.Server.pb.cc  IM.Server.proto  IM.SwitchService.pb.cc  IM.SwitchService.proto
src/pb/protocol_old/: IM.BaseDefine.pb.cc  IM.BaseDefine.pb.h  IM.Buddy.pb.cc  IM.Buddy.pb.h  IM.File.pb.cc  IM.File.pb.h  IM.Login.pb.cc  IM.Login.pb.h  IM.Server.pb.cc  IM.Server.pb.h
src/pkg/include/base/: HttpClient.h  ImPduBase.h  SSLSocket.h  imconn.h  netlib.h  ostype.h
src/pkg/include/security/: security.h
src/push_server/: CMakeLists.txt  apns_feedback_handler.cpp  push_app.cpp  push_define.h  push_server.cpp  push_session_handler.cpp
src/push_server/socket/: epoll_io_loop.cpp  ssl_client_async.cpp  tcp_server.cpp  tcp_session_async.cpp
src/route_server/: CMakeLists.txt  UserInfo.cpp
src/security/: CMakeLists.txt
src/test/: .gitignore  Client.h  ClientConn.h  README.md
teamtalk/base/: BaseSocket.cpp  CMakeLists.txt  Condition.cpp  ConfigFileReader.cpp  EncDec.cpp  EventDispatch.cpp  HttpClient.cpp  HttpParserWrapper.cpp  ImPduBase.cpp  Lock.cpp  SSLSocket.cpp  ServInfo.cpp  Thread.cpp  ThreadPool.cpp  TokenValidator.cpp  UtilPdu.cpp  http_parser.cpp  im_conn_util.cpp  imconn.cpp  netlib.cpp  util.cpp
teamtalk/db_proxy_server/: CMakeLists.txt  DBPool.cpp  DBPool.h  HandlerMap.cpp  HandlerMap.h  ProxyConn.h  SyncCenter.cpp  SyncCenter.h  async.h
teamtalk/db_proxy_server/business/: AudioModel.cpp  AudioModel.h  DepartModel.cpp  DepartModel.h  FileModel.cpp  FileModel.h  GroupMessageModel.h  GroupModel.h  InterLogin.cpp  InterLogin.h  Login.cpp  LoginStrategy.h  MessageCounter.cpp  MessageCounter.h  MessageModel.cpp  RecentSession.cpp  RecentSession.h  RelationModel.h  SessionModel.cpp  SessionModel.h  UserAction.cpp
teamtalk/file_server/: CMakeLists.txt  config_util.h  file_client_conn.h  file_server.cpp  fileserver.yaml
teamtalk/http_msg_server/: AttachData.h  CMakeLists.txt  DBServConn.cpp  HttpConn.cpp  HttpConn.h  HttpPdu.cpp  HttpQuery.cpp  HttpQuery.h  RouteServConn.h  http_msg_server.cpp  httpmsgserver.conf
teamtalk/login_server/: CMakeLists.txt  HttpConn.h  LoginConn.h  ipparser.cpp  login_server.cpp  loginserver.yaml
teamtalk/msfs/: CMakeLists.txt  HttpConn.cpp  HttpConn.h  Portable.h  msfs.yaml
teamtalk/msg_server/: CMakeLists.txt  DBServConn.cpp  DBServConn.h  FileHandler.h  FileServConn.cpp  GroupChat.cpp  GroupChat.h  ImUser.cpp  PushServConn.cpp  PushServConn.h  RouteServConn.cpp  msg_server.cpp  msgserver.conf
teamtalk/pb/protocol/: IM.BaseDefine.pb.h  IM.BaseDefine.proto  IM.Buddy.pb.cc  IM.Buddy.pb.h  IM.File.pb.h  IM.Group.pb.cc  IM.Group.proto  IM.Login.pb.cc  IM.Login.pb.h  IM.Login.proto  IM.Message.pb.cc  IM.Message.pb.h  IM.Message.proto  IM.Other.proto  IM.Server.pb.h  IM.SwitchService.pb.h
teamtalk/pkg/include/base/: ServInfo.h  ThreadPool.h  public_define.h  singleton.h  util.h
teamtalk/push_server/: CMakeLists.txt  apns_client.cpp  apns_client_handler.cpp  apns_msg.cpp  pdu_msg.cpp  push_server_handler.cpp  session_manager.cpp
teamtalk/push_server/socket/: base_io_stream.cpp  io_loop.cpp  socket_io_define.h  tcp_client_async.cpp
teamtalk/route_server/: CMakeLists.txt  RouteConn.cpp  RouteConn.h  UserInfo.h  route_server.cpp
teamtalk/security/: CMakeLists.txt  aes_core.cpp  md5.cpp  security.cpp
teamtalk/test/: Client.cpp  ClientConn.cpp  Makefile  test_client.cpp
