cmake_minimum_required(VERSION 3.10)
PROJECT(security)
AUX_SOURCE_DIRECTORY(. SRC_LIST)
AUX_SOURCE_DIRECTORY(include SRC_LIST)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)
set(INSTALL_HEADER_PATH ${CMAKE_SOURCE_DIR}/public/include)
set(INSTALL_LIB_PATH ${CMAKE_SOURCE_DIR}/public/lib)
if(WIN32)
ADD_DEFINITIONS()
else()
ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
-DAC_HAS_DEBUG -DLINUX_DAEMON -DSERVER)
endif()

ADD_LIBRARY(security STATIC ${SRC_LIST})
target_include_directories(
        security PRIVATE
        .
        include
        /usr/local/include
)
# install headers
#install(DIRECTORY ${CMAKE_SOURCE_DIR}/public/include/security
#        DESTINATION ${INSTALL_HEADER_PATH}
#        FILES_MATCHING PATTERN "*.h")
#install(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR}/${CMAKE_PROJECT_NAME})
install(DIRECTORY ${INSTALL_HEADER_PATH} DESTINATION ${CMAKE_INSTALL_PREFIX})
install(TARGETS security DESTINATION ${INSTALL_LIB_PATH} EXPORT libsecurity)

